[gd_scene load_steps=7 format=2]

[ext_resource path="res://GFX/PNG/Tiles/tile_537.png" type="Texture" id=1]
[ext_resource path="res://UI/ComputerPopUp.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/computer.gd" type="Script" id=3]
[ext_resource path="res://GFX/PNG/Tiles/tile_519.png" type="Texture" id=4]
[ext_resource path="res://UI/Theme.tres" type="Theme" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 32 )

[node name="Computer" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -4.71238
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 48, 0 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ComputerPopUp" parent="CanvasLayer" instance=ExtResource( 2 )]

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 32, 0 )
rotation = 1.5708
enabled = false
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="." groups=[
"labels",
]]
visible = false
margin_left = 24.0
margin_top = -24.0
margin_right = 104.0
margin_bottom = 3.0
theme = ExtResource( 5 )
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
